# relfair

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: benchmarks.md  changelog.md  index.md  installation.md  quickstart.md
docs/api/: counterfactual.md  discovery.md  graph.md  manifold.md  mechanisms.md  metrics.md  report.md
docs/guide/: cli.md  counterfactual.md  metrics.md
experiments/: README.md
experiments/adult/: adult.parquet  config.py  run.py
experiments/folktables/: config.py  run.py
experiments/german_credit/: config.py  run.py
relfair/: __init__.py  cli.py  counterfactual.py  discovery.py  graph.py  manifold.py  mechanisms.py
relfair/metrics/: __init__.py  ll144.py  stats.py
relfair/report/: __init__.py  json_export.py  pdf.py
relfair/report/templates/: ll144.html.j2
tests/: conftest.py  test_counterfactual.py  test_graph.py  test_manifold.py  test_mechanisms.py  test_metrics.py
