[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relfair"
version = "0.1.0"
description = "Relationship-aware counterfactual fairness testing"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Archit Rathod", email = "architrathod77@gmail.com" }]
keywords = ["fairness", "counterfactual", "causal", "bias", "auditing", "LL144"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core deps — kept minimal so the library is importable as a research artifact.
# Phase 0 (counterfactual engine) + Phase 1 (LL 144 metrics) dependencies.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.1",
    "networkx>=3.2",
    "dowhy>=0.11",
    "causal-learn>=0.1.3",
    "fairlearn>=0.10",
    "scipy>=1.11",
]

# project.urls must come AFTER all bare [project] keys in TOML
[project.urls]
Homepage      = "https://github.com/Archit1706/relfair"
Documentation = "https://archit1706.github.io/relfair"
Repository    = "https://github.com/Archit1706/relfair"
"Bug Tracker" = "https://github.com/Archit1706/relfair/issues"
Changelog     = "https://archit1706.github.io/relfair/changelog/"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
cli = [
    "click>=8.1",
    "rich>=13",
]
report = [
    "weasyprint>=62",
    "jinja2>=3.1",
]
experiments = [
    "folktables>=0.0.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter",
]
docs = [
    "mkdocs-material>=9.5",
]
all = [
    "relfair[dev,cli,report,experiments,docs]",
]

[project.scripts]
relfair = "relfair.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["relfair*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
